<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/login_welcome"
        android:gravity="bottom"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minLines="1"
        android:maxLines="1"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:hint="@string/login_hint"
        android:inputType="textPassword" />
    
	<FrameLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1">
	    
    	<Button
        	android:onClick="login"
        	android:text="@string/login_login"
        	android:layout_width="fill_parent"
       		android:layout_height="wrap_content"/>
    	
    </FrameLayout>
    
</LinearLayout>